Replaces the ListOfStatistics with an ordinary jdk List.
Refs #48287